<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour">

    <TextView
        android:id="@+id/lookView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lookView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/post"
        android:textSize="20sp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/lookView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lookView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lookView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/department"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editCurrent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/edit" />



</LinearLayout>