<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/rectvectorvjec1"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/vjecDeptButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_above="@+id/vjecAdministrationButton"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"

        android:layout_marginRight="120dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/departments"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/vjecAdministrationButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_above="@+id/vjecIntercomButton"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/mybutton"

        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/administration"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/vjecIntercomButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_above="@+id/vjecGeneralFacilitiesButton"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/mybutton"

        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/intercom"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/vjecGeneralFacilitiesButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_above="@+id/vjecUsefulLinksButton"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/mybutton"

        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/general_facilities"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/vjecUsefulLinksButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="120dp"

        android:layout_marginBottom="35dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/useful_links"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>