<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/rectvectorvjec1" />

        <Button
            android:id="@+id/CSEButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/cse"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/EEEButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/CSEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/eee"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ECEButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/EEEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/ece"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/EIButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/ECEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/aie"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/CEButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/EIButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100sp"

            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/ce"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/MEButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/CEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100sp"

            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/me"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/AIDSButton"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/MEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="@string/ash"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>
