<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <ImageView
        android:id="@+id/bg_header"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/header"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        />

    <ImageView
        android:id="@+id/bg_footer"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/header"
        android:rotation="180"
        android:scaleType="fitXY"
        android:src="@drawable/header_register"
        />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bg_header"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="#1B2B49"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bg_header"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="15dp"
            android:background="#b0c4de"
            android:layout_marginStart="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="3dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:layout_marginStart="10dp">

                    <EditText
                        android:id="@+id/username_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="30dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:padding="10dp"
                        android:importantForAutofill="no" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="250dp"
                        android:layout_height="2dp"
                        android:layout_below="@+id/username_text"
                        android:background="#6B000000" />

                    <EditText
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view1"
                        android:layout_margin="15dp"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="30dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"

                        android:importantForAutofill="no"
                        android:drawableStart="@drawable/ic_lock" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/card_view"
                android:layout_alignRight="@+id/card_view"
                android:layout_alignBottom="@+id/card_view"
                android:layout_marginRight="-30dp"
                android:elevation="10dp"
                android:layout_alignEnd="@+id/card_view"
                android:layout_marginEnd="-30dp">

                <ImageButton
                    android:id="@+id/btLogin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_uiborder"
                    app:srcCompat="@drawable/ic_arrow"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

    <ImageView
        android:layout_width="197dp"
        android:layout_height="96dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo"
        android:layout_marginStart="350dp" />

</RelativeLayout>